# Yolo-tensorrt-ros2

./: .gitignore  README.md
src/stardust_tensorrt/: CMakeLists.txt  package.xml
src/stardust_tensorrt/config/: cfg.yaml  trash.txt
src/stardust_tensorrt/include/: common.h  ros2_node.h
src/stardust_tensorrt/include/framework/: framework.h  onnx.h  tensorrt.h
src/stardust_tensorrt/include/model/: model.h  yolov5.h  yolov8.h  yolov8_seg.h
src/stardust_tensorrt/include/stardust_tensorrt/: common.h  model.h  ros2_node.h  yolov5.h  yolov8.h
src/stardust_tensorrt/launch/: test.py
src/stardust_tensorrt/src/: common.cpp  model.cpp  onnx.cpp  ros2_node.cpp  tensorrt.cpp  yolov5.cpp  yolov8.cpp  yolov8_seg.cpp
